Mon Feb 19 15:30:04 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * MPC/config/xscdefaults.mpb
        * tools/Config_Handlers/Config_Handlers.mpc
        
          Added a custom type to MPC to handle XSC generation.
        
Wed Feb  7 21:16:36 UTC 2007  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ciao/Deployment_Data.idl
        * ciao/Deployment_ApplicationManager.idl
        * ciao/CCM_CCMException.idl
        * ciao/Deployment_Application.idl
        * ciao/Context_Impl_Base.h
        * ciao/Deployment.idl
        * ciao/Context_Impl_Base.cpp
        * ciao/Deployment_NodeApplication.idl
        * ciao/Deployment_TargetData.idl
        * ciao/CCM_Events.idl
        * ciao/Deployment_ExecutionManager.idl
        * ciao/Deployment_NodeApplicationManager.idl
        * ciao/CCM_Context.idl
        * ciao/Deployment_Base.idl
        * ciao/Deployment_Packaging_Data.idl
        * ciao/Deployment_DomainApplicationManager.idl
        * ciao/Deployment_Connection.idl
        * ciao/Deployment_TargetManager.idl
        * ciao/Deployment_DeploymentPlan.idl
        * ciao/Deployment_NodeManager.idl
        
          Updated with changes to comply with the 06-02-01 version of the
          DnC spec.  Many of these changes would break the entire toolchain,
          so they are commented out for the time being.  grep for

          @@changed @@add @@delete
        
          to find changes.
          
        * ciao/CCM_Core.mpc
        *ciao/Deployment_DomainApplication.idl
        
         Added DomainApplication interface, completely missing from our IDL.

        

Local Variables:
mode: change-log
add-log-time-format: (lambda () (progn (setq tz (getenv "TZ")) (set-time-zone-rule "UTC") (setq time (format-time-string "%a %b %e %H:%M:%S %Z %Y" (current-time))) (set-time-zone-rule tz) time))
indent-tabs-mode: nil
End: