@@ -1,11 +1,30 @@
 //$Id$
 
+project (CIAO_Events_XML_Generation) : xscdefaults {
+   requires += xsc
+
+   xscflags += --cxx-banner-file $(CIAO_ROOT)/docs/schema/xsc-banner.cpp
+   xscflags += --cxx-header-banner-file $(CIAO_ROOT)/docs/schema/xsc-banner.h
+   xscflags += --cxx-export-symbol CIAO_Events_Handlers_Export
+   xscflags += --cxx-namespace-regex "%.*vanderbilt.*%CIAO/Config_Handlers%"
+   xscflags += --cxx-export-header CIAO_Events_Handlers_Export.h
+   xscflags += --search-path "$(CIAO_ROOT)/docs/schema"
+   
+   custom_only = 1
+
+   XSC_Files {
+        gendir = .
+        $(CIAO_ROOT)/docs/schema/CIAOEvents.xsd
+   }
+}
+
 project (CIAO_Events_Handlers) : acelib, ciao_xml_utils, ciao_events_dnc, ciao_deployment_stub {
   sharedname = CIAO_Events_Handlers
   dynamicflags   = CIAO_EVENTS_HANDLERS_BUILD_DLL
   macros   += XML_USE_PTHREADS
   includes += $(CIAO_ROOT)/tools/Config_Handlers
 
+  after += CIAO_Events_XML_Generation 
   Source_Files {
     CIAOEvents.cpp
     CIAOEvents_Handler.cpp
