@@ -37,14 +37,10 @@ namespace CIAO
 
         if (root == XStr ("Deployment:topLevelPackageDescription"))
           {
-	    PackageConfiguration foo;
-	    TopLevelPackageDescription tpd (foo);
+            TopLevelPackageDescription tpd = topLevelPackageDescription (dom);
 
-            tpd = topLevelPackageDescription (dom);
-
-            PCD_Handler::package_config (tpd.package (),
+            PCD_Handler::package_config (*tpd.begin_basePackage (),
                                          toconfig);
-
           }
         else if (root == XStr ("Deployment:packageConfiguration"))
           {
@@ -75,10 +71,10 @@ namespace CIAO
 
         const PackageConfiguration *pcd;
 
-        if (desc.href_p ())
+        if (desc.contentLocation_p ())
           {
             // Take ownership of the resolved pcd
-            xsc_pcd.reset (PCD_Handler:: resolve_package_config (desc.href ().c_str ()));
+            xsc_pcd.reset (PCD_Handler:: resolve_package_config (desc.contentLocation ().c_str ()));
             pcd = xsc_pcd.get ();
           }
         else
